# d2c-graph

./: .gitignore  README.md  SKILL.md  config.example.yaml  pyproject.toml
src/d2c_graph/: __init__.py  cli.py  config.py  dashboard.py  runtime.py
src/d2c_graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/d2c_graph/clients/: __init__.py  d2c_mcp.py  figma_mcp.py  mcp_process.py
src/d2c_graph/graph/: checks.py  state.py  workflow.py
src/d2c_graph/llm/: factory.py  runner.py
src/d2c_graph/prompts/: __init__.py  generate_kmp.md  generate_react.md  reconcile_facts.md  visual_anchors.md
src/d2c_graph/templates/: __init__.py
src/d2c_graph/templates/kmp/: build.gradle.kts  gradlew  settings.gradle.kts
src/d2c_graph/templates/kmp/composeApp/: build.gradle.kts
src/d2c_graph/templates/kmp/composeApp/src/commonMain/kotlin/: App.kt  Main.kt
src/d2c_graph/templates/react/: index.html  package.json
src/d2c_graph/templates/react/src/: App.tsx  index.css
tests/: test_checks.py  test_config.py  test_d2c_mcp.py  test_dashboard.py  test_figma_mcp.py  test_graph.py  test_mcp_http.py  test_mcp_sse.py
tests/fixtures/: fake_figma_mcp_server.py  fake_mcp_server.py
